--- a/practice_oa.ipynb
+++ b/practice_oa.ipynb
@@ -9,6 +9,16 @@
    "source": [
     "print(\"Hello, practice OA\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47513822-4f81-47e4-ad0e-102265e939dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Hi\")"
+   ]
   }
  ],
  "metadata": {
